src/test/ui/issues/issue-10412.stderr
error: lifetimes cannot use keyword names
  --> $DIR/issue-10412.rs:1:20
   |
LL | trait Serializable<'self, T> {
   |                    ^^^^^

error: lifetimes cannot use keyword names
  --> $DIR/issue-10412.rs:3:24
   |
LL |     fn serialize(val: &'self T) -> Vec<u8>;
   |                        ^^^^^

error: lifetimes cannot use keyword names
  --> $DIR/issue-10412.rs:4:37
   |
LL |     fn deserialize(repr: &[u8]) -> &'self T;
   |                                     ^^^^^

error: lifetimes cannot use keyword names
  --> $DIR/issue-10412.rs:7:6
   |
LL | impl<'self> Serializable<str> for &'self str {
   |      ^^^^^

error: lifetimes cannot use keyword names
  --> $DIR/issue-10412.rs:7:36
   |
LL | impl<'self> Serializable<str> for &'self str {
   |                                    ^^^^^

error: lifetimes cannot use keyword names
  --> $DIR/issue-10412.rs:11:24
   |
LL |     fn serialize(val: &'self str) -> Vec<u8> {
   |                        ^^^^^

error: lifetimes cannot use keyword names
  --> $DIR/issue-10412.rs:15:37
   |
LL |     fn deserialize(repr: &[u8]) -> &'self str {
   |                                     ^^^^^

error[E0106]: missing lifetime specifier
  --> $DIR/issue-10412.rs:7:26
   |
LL | impl<'self> Serializable<str> for &'self str {
   |                          ^ expected named lifetime parameter
   |
help: consider using the `'self` lifetime
   |
LL | impl<'self> Serializable<'self, str> for &'self str {
   |                          ++++++

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0106`.
